--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "geotic-threejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec babel-node source/main.js",
+    "build": "babel source --out-dir build",
+    "start": "node build/main.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ddmills/geotic-threejs.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ddmills/geotic-threejs/issues"
-  },
-  "homepage": "https://github.com/ddmills/geotic-threejs#readme",
   "dependencies": {
     "geotic": "^0.1.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "nodemon": "^1.9.2"
   }
 }
