--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "geotic-threejs",
   "scripts": {
-    "dev": "nodemon --exec babel-node source/main.js",
-    "build": "babel source --out-dir build",
-    "start": "node build/main.js"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --hot --inline"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "dependencies": {
-    "geotic": "^0.1.2"
+    "geotic": "^0.1.2",
+    "three": "^0.79.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "nodemon": "^1.9.2"
+    "copy-webpack-plugin": "^3.0.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
